--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "shoppinglist",
+  "name": "MHGUWishlist",
   "version": "1.0.0",
   "description": "A Shopping List",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . mh-farming-list-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"MHFarmingList\"",
+    "package-win": "electron-packager . mh-farming-list-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"MHGUWishlist\"",
     "package-linux": "electron-packager . shopping-list-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
   },
   "author": "Patrick Evers",
