--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MHGUWishlist",
+  "name": "mhguwishlist",
   "version": "1.0.0",
   "description": "A Shopping List",
   "main": "main.js",
